# jewgo-app

./: .env.local.backup  .gitignore  .vercelignore  API_DATA_FORMAT_FIX_SUMMARY.md  API_ENDPOINT_FIX.md  API_ERROR_FIXES_COMPLETE.md  API_TIMEOUT_FIX_SUMMARY.md  AUTOMATED_SCHEDULING_SETUP_COMPLETE.md  BUTTON_FUNCTIONALITY_REPORT.md  BUTTON_TEXT_VISIBILITY_FIX.md  CHALAV_YISROEL_FIX_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_UPDATE_SUMMARY.md  COLOR_SYSTEM_GUIDE.md  COMPATIBILITY_ANALYSIS_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_KOSHER_STATUS_UPDATE.md  CONSOLIDATION_SUMMARY.md  CONTINUE_DEPLOYMENT_GUIDE.md  CORS_ADMIN_SPECIALS_FIX.md  CORS_FIX_SUMMARY.md  CURRENT_ORB_SYSTEM_STATUS.md  DATABASE_POPULATION_SUCCESS.md  DATABASE_RESET_AND_POPULATION_SUMMARY.md  DATABASE_SCHEMA_FIX_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_UPDATES_SUMMARY.md  DEPLOY_WITHOUT_SHELL_GUIDE.md  DYNAMIC_STATUS_IMPLEMENTATION_SUMMARY.md  FINAL_DEPLOYMENT_RESOLUTION.md  FINAL_DEPLOYMENT_RESOLUTION_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_ORB_IMPLEMENTATION_SUMMARY.md  FINAL_TYPESCRIPT_ARRAY_FIX.md  (+236 more)
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
app/: globals.css  layout.tsx  page.tsx
backend/: analyze_hours_format.py  app.py  render.yaml  (+19 more)
(+2488 files in other folders)
